--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -10,9 +10,12 @@
  jet_engines_desc:0 "A breakthrough in propulsion technology, the Jet Engine will enable the development of an entirely new generation of aircraft."
  convoy_1:0 "Convoy"
  
- medium_assault_gun_chassis:0 "Medium Assault Guns"
- heavy_assault_gun_chassis:0 "Heavy Assault Guns"
- 
+ medium_assault_gun_chassis:0 "Medium Assault Gun"
+ medium_assault_gun_chassis_desc:0 "Medium Assault Gun is a mobile fixed turret armored vehicles with infantry support artillery."
+
+ heavy_assault_gun_chassis:0 "Heavy Assault Gun"
+ heavy_assault_gun_chassis_desc:0 "Heavy Assault Gun is a mobile fixed turret armored vehicles with infantry support artillery."
+
  tech_m4a3_equipment:0 "M4A3 Medium Tank"
  
  ##### Motorized Equipment
@@ -505,11 +508,8 @@
  GER_gw_tank_equipment:0 "A7V"
  GER_gw_tank_equipment_short:0 "A7V WW1 Lt.TK"
  GER_gw_tank_equipment_desc:0 "The A7V was a heavy tank introduced by Germany in 1918, during World War I. The crew officially consisted of at least 17 soldiers and one officer who would control the 33 ton vehicle that was powered by two centrally mounted Daimler 4-cylinder petrol engines delivering 101 hp each"
- light_tank_equipment:0 "Light Armor"
- light_tank_equipment_short:0 "Light Armor"
- GER_light_tank_equipment:0 "Light Armor"
- GER_light_tank_equipment_short:0 "Light Armor"
- light_tank_equipment_desc:0 "Light tanks are small, agile tanks which are able to both scout and fight lightly armored opponents."
+ light_tank_chassis:0 "Light Tank"
+ light_tank_chassis_desc:0 "Light tanks are small, agile tanks which are able to both scout and fight lightly armored opponents."
  light_tank_equipment_0:0 "Light Armor"
  light_tank_equipment_0_short:0 "Light Armor"
  light_tank_equipment_0_desc:0 "WW1 light tanks are small, light armed tanks which are designed primarily to support infantry with MG fire."
@@ -833,8 +833,8 @@
  light_tank_equipment_5_short:0 "Late war Lt.TK"
  light_tank_equipment_5_desc:0 "Lt.TKs are small, agile tanks which are able to both scout and fight lightly armored opponents."
  
- light_tank_artillery_equipment:0 "Light SP Artillery"
- light_tank_artillery_equipment_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
+ light_tank_artillery_chassis:0 "Light SP Artillery"
+ light_tank_artillery_chassis_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
  light_tank_artillery_equipment_1:0 "Light SP Artillery I"
  light_tank_artillery_equipment_1_short:0 "L. SPG I"
  light_tank_artillery_equipment_1_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
@@ -848,8 +848,8 @@
  light_tank_artillery_equipment_4_short:0 "L. SPG IV"
  light_tank_artillery_equipment_4_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
  
- light_tank_destroyer_equipment:0 "Lt.TK Destroyer"
- light_tank_destroyer_equipment_short:0 "L. Tank Destroyer"
+ light_tank_destroyer_chassis:0 "Lt.TK Destroyer"
+ light_tank_destroyer_chassis_short:0 "L. Tank Destroyer"
  light_tank_destroyer_equipment_desc:0 "Tank Destroyers are tanks with a larger than normal gun in a fixed mounting in place of a turret. Lt.TK Destroyers are based on the chassis of Lt.TKs, which means they are fairly mobile but do not carry particularly powerful guns compared to heavier TDs."
  light_tank_destroyer_equipment_1:0 "Lt.TK Destroyer I"
  light_tank_destroyer_equipment_1_short:0 "L. TD I"
@@ -864,8 +864,8 @@
  light_tank_destroyer_equipment_4_short:0 "L. TD IV"
  light_tank_destroyer_equipment_4_desc:0 "Tank Destroyers are tanks with a larger than normal gun in a fixed mounting in place of a turret. Lt.TK Destroyers are based on the chassis of Lt.TKs, which means they are fairly mobile but do not carry particularly powerful guns compared to heavier TDs."
  
- light_tank_aa_equipment:0 "Light SP Anti-Air"
- light_tank_aa_equipment_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets. This model is mounted on the chassis of a Lt.TK."
+ light_tank_aa_chassis:0 "Light SP Anti-Air"
+ light_tank_aa_chassis_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets. This model is mounted on the chassis of a Lt.TK."
  light_tank_aa_equipment_1:0 "Light SP Anti-Air I"
  light_tank_aa_equipment_1_short:0 "L. AA I"
  light_tank_aa_equipment_1_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets. This model is mounted on the chassis of a Lt.TK."
@@ -878,19 +878,7 @@
  light_tank_aa_equipment_4:0 "Light SP Anti-Air IV"
  light_tank_aa_equipment_4_short:0 "L. AA IV"
  light_tank_aa_equipment_4_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets. This model is mounted on the chassis of a Lt.TK."
- 
- cavalry_tank_equipment:0 "Cavalry Tank"
- cavalry_tank_equipment_short:0 "Cavalry Tank"
- cavalry_tank_equipment_desc:0 "Cavalry Tank"
- cavalry_tank_equipment_0:0 "Pre War Cavalry Tanks"
- cavalry_tank_equipment_0_desc:0 "Cavalry tanks are faster, reasonably well armed tanks designed to exploit breeches and rout the enemy"
- cavalry_tank_equipment_0_short:0 "T-26"
- cavalry_tank_equipment_1:0 "Early War Cavalry Tanks"
- cavalry_tank_equipment_1_desc:0 "Cavalry tanks are faster, reasonably well armed tanks designed to exploit breeches and rout the enemy"
- cavalry_tank_equipment_1_short:0 "BT-7"
- cavalry_tank_equipment_2:0 "Mid War Cavalry Tanks"
- cavalry_tank_equipment_2_desc:0 "Cavalry tanks are faster, reasonably well armed tanks designed to exploit breeches and rout the enemy"
- cavalry_tank_equipment_2_short:0 "Crusader"
+
  
  medium_assault_gun_equipment:0 "Med.Ass.Gun"
  medium_assault_gun_equipment_desc:0 "Medium Assault Gun. Mobile fixed turret armored vehicles with infantry support artillery."
@@ -905,13 +893,12 @@
  medium_assault_gun_equipment_3_desc:0 "A new model with a more rugged and larger chassis, this 24 ton beast can now mount a larger 80 mm infantry guns and short range mortars."
  heavy_assault_gun_equipment:0 "Hv.AG"
  heavy_assault_gun_equipment_desc:0 "Heavy Assault Gun. Mobile fixed turret armored vehicles with infantry support artillery."
- modern_tank_equipment:0 "Modern Tank"
  
  infantry_tank_equipment:0 "Infantry Tank"
  infantry_tank_equipment_desc:0 ""
  
- medium_tank_equipment:0 "Medium Tank"
- medium_tank_equipment_desc:0 "Medium Tanks are reasonably agile multi-purpose tanks which are able to take on many roles such as scouts, support, or even front-line tanks."
+ medium_tank_chassis:0 "Medium Tank"
+ medium_tank_chassis_desc:0 "Medium Tanks are reasonably agile multi-purpose tanks which are able to take on many roles such as scouts, support, or even front-line tanks."
  medium_tank_equipment_0:0 "Medium Tank I"
  medium_tank_equipment_0_short:0 "Med.TK I"
  medium_tank_equipment_0_desc:0 "Medium Tanks are reasonably agile multi-purpose tanks which are able to take on many roles such as scouts, support, or even front-line tanks."
@@ -934,9 +921,8 @@
  medium_tank_equipment_4_short:1 "Modern Med.TK"
  medium_tank_equipment_4_desc:0 "Modern medium tanks are agile multi-purpose tanks which are able to take on many roles such as scouts, support, or even front-line tanks."
  
- medium_tank_artillery_equipment:0 "Medium SP Artillery"
- medium_tank_artillery_equipment_short:0 "Medium SPG"
- medium_tank_artillery_equipment_desc:0 "A medium artillery cannon mounted on a medium tank chassis, a medium SPG packs respectable firepower while still being quite mobile."
+ medium_tank_artillery_chassis:0 "Medium SP Artillery"
+ medium_tank_artillery_chassis_desc:0 "A medium artillery cannon mounted on a medium tank chassis, a medium SPG packs respectable firepower while still being quite mobile."
  medium_tank_artillery_equipment_1:0 "Medium SP Artillery I"
  medium_tank_artillery_equipment_1_short:0 "Medium SPG I"
  medium_tank_artillery_equipment_1_desc:0 "A medium artillery cannon mounted on a medium tank chassis, a medium SPG packs respectable firepower while still being quite mobile."
@@ -947,9 +933,8 @@
  medium_tank_artillery_equipment_3_short:0 "Medium SPG III"
  medium_tank_artillery_equipment_3_desc:0 "A medium artillery cannon mounted on a medium tank chassis, a medium SPG packs respectable firepower while still being quite mobile."
  
- medium_tank_destroyer_equipment:0 "Med.TK Destroyer"
- medium_tank_destroyer_equipment_short:0 "Med. Tank Destroyer"
- medium_tank_destroyer_equipment_desc:0 "Tank Destroyers are tanks with a larger than normal gun in a fixed mounting in place of a turret. Medium tank destroyers are based on the chassis of medium tanks, meaning they are fairly mobile and carry respectable firepower."
+ medium_tank_destroyer_chassis:0 "Med.TK Destroyer"
+ medium_tank_destroyer_chassis_desc:0 "Tank Destroyers are tanks with a larger than normal gun in a fixed mounting in place of a turret. Medium tank destroyers are based on the chassis of medium tanks, meaning they are fairly mobile and carry respectable firepower."
  medium_tank_destroyer_equipment_1:0 "Med.TK Destroyer I"
  medium_tank_destroyer_equipment_1_short:0 "Med. TD I"
  medium_tank_destroyer_equipment_1_desc:0 "Tank Destroyers are tanks with a larger than normal gun in a fixed mounting in place of a turret. Medium tank destroyers are based on the chassis of medium tanks, meaning they are fairly mobile and carry respectable firepower."
@@ -968,8 +953,8 @@
  SOV_medium_tank_destroyer_equipment_3:0 "SU-100 Equipment"
  SOV_medium_tank_destroyer_equipment_3_short:0 "SU-100 Equipment"
  #SOV_medium_tank_destroyer_equipment_3_desc:0 ""
- medium_tank_aa_equipment:0 "Medium SP Anti-Air"
- medium_tank_aa_equipment_desc:0 "Mobile anti-air artillery mounted on a medium tank chassis."
+ medium_tank_aa_chassis:0 "Medium SP Anti-Air"
+ medium_tank_aa_chassis_desc:0 "Mobile anti-air artillery mounted on a medium tank chassis."
  medium_tank_aa_equipment_1:0 "Medium SP Anti-Air I"
  medium_tank_aa_equipment_1_short:0 "M. AA I"
  medium_tank_aa_equipment_1_desc:0 "Mobile anti-air artillery mounted on a medium tank chassis."
@@ -988,8 +973,8 @@
  SOV_medium_tank_aa_equipment_3:0 "ZSU-57-44"
  SOV_medium_tank_aa_equipment_3_short:0 "ZSU-57-44"
  #SOV_medium_tank_aa_equipment_3_desc:0 ""
- heavy_tank_equipment:0 "Heavy Tanks"
- heavy_tank_equipment_desc:0 "Heavy tanks are large, armored monsters which are designed to destroy enemy tanks and fortifications."
+ heavy_tank_chassis:0 "Heavy Tanks"
+ heavy_tank_chassis_desc:0 "Heavy tanks are large, armored monsters which are designed to destroy enemy tanks and fortifications."
  heavy_tank_equipment_1:0 "Heavy Tank I"
  heavy_tank_equipment_1_short:0 "Pre War Hv.TK"
  heavy_tank_equipment_1_desc:0 "Heavy tanks are large, armored monsters which are designed to destroy enemy tanks and fortifications. This beast tips the scale at over 40 tons and is seriously underpowered even with the heaviest automobile engines available producing 250 hp."
@@ -1008,8 +993,8 @@
  heavy_tank_equipment_4:0 "Heavy Tank IV"
  heavy_tank_equipment_4_short:0 "Post War Hv.TK"
  heavy_tank_equipment_4_desc:0 "850 horsepower engine is just enough to tug along this 70 ton beast. A 110 mm tank gun with advanced optics can hit an enemy tank at a distance of 3 km!"
- heavy_tank_artillery_equipment:0 "Heavy SP Artillery"
- heavy_tank_artillery_equipment_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
+ heavy_tank_artillery_chassis:0 "Heavy SP Artillery"
+ heavy_tank_artillery_chassis_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
  heavy_tank_artillery_equipment_1:0 "Heavy SP Artillery I"
  heavy_tank_artillery_equipment_1_short:0 "H. SPG I"
  heavy_tank_artillery_equipment_1_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
@@ -1022,9 +1007,8 @@
  heavy_tank_artillery_equipment_4:0 "Heavy SP Artillery IV"
  heavy_tank_artillery_equipment_4_short:0 "H. SPG IV"
  heavy_tank_artillery_equipment_4_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
- heavy_tank_destroyer_equipment:0 "Hv.TK Destroyer"
- heavy_tank_destroyer_equipment_short:0 "Hvy. Tank Destroyer"
- heavy_tank_destroyer_equipment_desc:0 "A Hv.TK with the turret removed to carry an even larger gun in a fixed mounting."
+ heavy_tank_destroyer_chassis:0 "Heavy Tank Destroyer"
+ heavy_tank_destroyer_chassis_desc:0 "A Heavy Tank with the turret removed to carry an even larger gun in a fixed mounting."
  heavy_tank_destroyer_equipment_1:0 "Hv.TK Destroyer I"
  heavy_tank_destroyer_equipment_1_short:0 "Hvy. TD I"
  heavy_tank_destroyer_equipment_1_desc:0 "A Hv.TK with the turret removed to carry a large 90 mm high velocity AT gun. The gun's weigt makes the vehicle front heavy and a fixing mount should be used while driving in terrain which has to be manually disconnected again to aim."
@@ -1037,20 +1021,6 @@
  heavy_tank_destroyer_equipment_4:0 "Hv.TK Destroyer IV"
  heavy_tank_destroyer_equipment_4_short:0 "Hvy. TD IV"
  heavy_tank_destroyer_equipment_4_desc:0 "A Hv.TK with the turret removed to carry an even larger gun in a fixed mounting."
- heavy_tank_aa_equipment:0 "Heavy SP Anti-Air"
- heavy_tank_aa_equipment_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
- heavy_tank_aa_equipment_1:0 "Heavy SP Anti-Air I"
- heavy_tank_aa_equipment_1_short:0 "Hvy. AA I"
- heavy_tank_aa_equipment_1_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
- heavy_tank_aa_equipment_2:0 "Heavy SP Anti-Air II"
- heavy_tank_aa_equipment_2_short:0 "Hvy. AA II"
- heavy_tank_aa_equipment_2_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
- heavy_tank_aa_equipment_3:0 "Heavy SP Anti-Air III"
- heavy_tank_aa_equipment_3_short:0 "Hvy. AA III"
- heavy_tank_aa_equipment_3_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
- heavy_tank_aa_equipment_4:0 "Heavy SP Anti-Air IV"
- heavy_tank_aa_equipment_4_short:0 "Hvy. AA IV"
- heavy_tank_aa_equipment_4_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
  SOV_heavy_tank_aa_equipment_1:0 "ZSU-12.7-4"
  SOV_heavy_tank_aa_equipment_1_short:0 "ZSU-12.7-4"
  #SOV_heavy_tank_aa_equipment_1_desc:0 ""
@@ -1060,8 +1030,8 @@
  SOV_heavy_tank_aa_equipment_3:0 "ISU-57-2"
  SOV_heavy_tank_aa_equipment_3_short:0 "ISU-57-2"
  #SOV_heavy_tank_aa_equipment_3_desc:0 ""
- super_heavy_tank_equipment:0 "Super Hv.TK"
- super_heavy_tank_equipment_desc:0 "Super heavy tanks are an evolution of the Hv.TK concept. Bigger, better armed, with more armor, they are also slower and have severe problems with soft ground and few bridges can hope to handle their weight."
+ super_heavy_tank_chassis:0 "Super Heavy Tank"
+ super_heavy_tank_chassis_desc:0 "Super heavy tanks are an evolution of the Hv.TK concept. Bigger, better armed, with more armor, they are also slower and have severe problems with soft ground and few bridges can hope to handle their weight."
  super_heavy_tank_equipment_1:0 "Super Hv.TK"
  super_heavy_tank_equipment_1_short:0 "Super Hv.TK"
  super_heavy_tank_equipment_1_desc:0 "Super Hv.TK with a 120 mm tank cannon and a weight of over 150 tons. This monster is underpowered despite having an engine rated at 1000 hp. The thick hull should in theory protect the tank from air attacks. However, the crew might not survive the shock from a 1000 lb bomb."
@@ -1069,48 +1039,15 @@
  super_heavy_tank_equipment_2_short:0 "Super Hv.TK II"
  super_heavy_tank_equipment_2_desc:0 "A very intimidating 140 mm tank cannon will scare away any armored opponent from the battlefield, long range optics and advanced turret hydralics help this 200 ton monstrosity become the king in any engagement."
  
- super_heavy_tank_artillery_equipment:0 "SH. SP Artillery"
- super_heavy_tank_artillery_equipment_desc:0 "Massive artillery cannons mounted on super heavy chassis."
+ super_heavy_tank_artillery_chassis:0 "SH. SP Artillery"
+ super_heavy_tank_artillery_chassis_desc:0 "Massive artillery cannons mounted on super heavy chassis."
  super_heavy_tank_artillery_equipment_1:0 "Super Heavy SP Artillery"
  super_heavy_tank_artillery_equipment_1_short:0 "SH. SPG"
  super_heavy_tank_artillery_equipment_1_desc:0 "Massive 500 mm mortar on super heavy chassis."
  super_heavy_tank_artillery_equipment_2:0 "Super Heavy SP Artillery"
  super_heavy_tank_artillery_equipment_2_short:0 "SH. SPG"
  super_heavy_tank_artillery_equipment_2_desc:0 "Massive 600 mm mortar mounted on super heavy chassis."
- 
- super_heavy_tank_destroyer_equipment:0 "Super Heavy SP Tank Destroyer"
- super_heavy_tank_destroyer_equipment_short:0 "SH. Tank Destroyer"
- super_heavy_tank_destroyer_equipment_desc:0 "A super Hv.TK chassis with an even larger gun in a fixed mount instead of a turret."
- super_heavy_tank_destroyer_equipment_1:0 "Super Heavy SP Tank Destroyer"
- super_heavy_tank_destroyer_equipment_1_short:0 "SH. TD"
- super_heavy_tank_destroyer_equipment_1_desc:0 "A super Hv.TK chassis with an even larger gun in a fixed mount instead of a turret."
- SOV_super_heavy_tank_destroyer_equipment_1:0 "ISU-130"
- SOV_super_heavy_tank_destroyer_equipment_1_short:0 "ISU-130"
- #SOV_super_heavy_tank_destroyer_equipment_1_desc:0 ""
- super_heavy_tank_aa_equipment:0 "Super Heavy SP Anti-Air"
- super_heavy_tank_aa_equipment_desc:0 "Super Hv.TK chassis with anti-aircraft armament"
- super_heavy_tank_aa_equipment_1:0 "Super Heavy SP Anti-Air"
- super_heavy_tank_aa_equipment_1_short:0 "SH. AA"
- super_heavy_tank_aa_equipment_1_desc:0 "Super Hv.TK chassi with anti-aircraft armament"
- 
- modern_tank_artillery_equipment:0 "Med.Ass.Gun"
- modern_tank_artillery_equipment_desc:0 "Medium Assault Gun. Mobile fixed turret armored vehicles with infantry support artillery."
- modern_tank_artillery_equipment_1:0 "Modern SP Artillery"
- modern_tank_artillery_equipment_1_short:0 "Modern SPG"
- modern_tank_artillery_equipment_1_desc:0 "Modern self-propelled artillery vehicles may superficially resemble tanks, but they are generally lightly armored, too lightly to survive in direct-fire combat. However, they protect their crews against shrapnel and small arms."
- 
- modern_tank_destroyer_equipment:0 "Hv.AG"
- modern_tank_destroyer_equipment_desc:0 "Hv.AG. Mobile fixed turret armored vehicles with infantry support artillery."
- modern_tank_destroyer_equipment_1:0 "Modern Tank Destroyer"
- modern_tank_destroyer_equipment_1_short:0 "Modern TD"
- modern_tank_destroyer_equipment_1_desc:0 "Modern Tank Destroyers are an evolution of earlier light and Med.TDs, preferring mobility and stealth to heavy armor."
- 
- modern_tank_aa_equipment:0 "Modern SP Anti-Air"
- modern_tank_aa_equipment_desc:0 "A combination of anti-air missiles and rapid fire cannon, modern anti-air artillery presents a deadly threat to aircraft."
- modern_tank_aa_equipment_1:0 "Modern SP Anti-Air"
- modern_tank_aa_equipment_1_short:0 "Modern AA"
- modern_tank_aa_equipment_1_desc:0 "A combination of anti-air missiles and rapid fire cannon, modern anti-air artillery presents a deadly threat to aircraft."
- 
+
 
  mechanized_equipment:0 "Mechanized"
  mechanized_equipment_short:0 "Mechanized"
