Australia minor changes

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -8065,8 +8065,11 @@ BUL_Monarch_Speech:0 "Monarch Speech"
  FRA_nationalize_sncf_desc:0 "Founding the SNCF will be a great achievement for our Great French Nation, making means of transportation easier for the public and travel more accessible."
  NZL_destroyer:0 "Long Range Attacks"
  NZL_destroyer_desc:0 ""
-
-
+ 
+ AST_gunbarrel:0 "Gunbarrel Highway"
+ AST_gunbarrel_desc:0 "The Gunbarrel Highway is an isolated desert track in the Northern Territory, South Australia and Western Australia. It consists of about 1,350 km (840 mi) of washaways, heavy corrugations, stone, sand and flood plains. The Gunbarrel Highway connects Victory Downs in the Northern Territory to Carnegie Station in Western Australia."
+ AST_eastcoast:0 "Develop the East Coast"
+ AST_eastcoast_desc:0 "The East Coast has the highest unemployment rates, the state's policies are not improving the situation, a federal solution must be figured out."
  #Brazil
  union_man:0 "Union Man"
  BRA_seize_more_power:0 "Support from Integralists"
