General loc, effects & ballance improvements. Also readded MAN Legitimacy but different form  & generally made MAN & China NFs for JAP more interesting
Signed-off-by: Bramja <bramja@hotmail.com>

--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -1739,7 +1739,7 @@
  japan_border_conflict.8.a:0 "We must hold the line."
  
  japan.21.t:0 "Five Ministers Conference"
- japan.21.d:0 "The Five Ministers Conference was a meeting between 5 important Japanese ministers, in which they laid out a plan for Japanese expansion. The Southern Expansion Doctrine (Nanshin-ron) stated that Southeast Asia and the Pacific Islands were Japan's sphere of interest and that the potential value to the Japanese Empire for economic and territorial expansion in those areas was greater than elsewhere. This political doctrine was diametrically opposite that of the "Northern Expansion Doctrine" (Hokushin-ron) largely supported by the Imperial Japanese Army, which stated the same except with regards to Manchuria and Siberia ( Unlocks either the Northern or the Southern focus tree branches)."
+ japan.21.d:0 "The Five Ministers Conference was a meeting between 5 important Japanese ministers, in which they laid out a plan for Japanese expansion. The Southern Expansion Doctrine ('Nanshin-ron') stated that Southeast Asia and the Pacific Islands were Japan's sphere of interest and that the potential value to the Japanese Empire for economic and territorial expansion in those areas was greater than elsewhere. This political doctrine was diametrically opposite that of the "Northern Expansion Doctrine" ('Hokushin-ron') largely supported by the Imperial Japanese Army, which stated the same except with regards to Manchuria and Siberia (Unlocks either the Northern or the Southern focus tree branches)."
  japan.21.a:0 "Let the Army draw up most of the plan."
  japan.21.b:0 "Let the Navy take charge of the planning."
  japan.21.c1:0 "Unlocks the Northern Expansion Doctrine Focus Tree"
@@ -1751,10 +1751,10 @@
  japan.22.d:0 "On the 26th of February, a group of young military officers attempted a coup d'état. The radical Kōdō-ha faction in the military assassinated several prominent politicians, but failed to assassinate the Prime Minister. The coup failed, and unlike in the aftermath of the previous attempted coup, the surviving perpetrators were given secret trials and shot."
  japan.22.a:0 "Purge them!"
  japan.222.t:0 "February 26 Incident conclusion"
- japan.222.d:0 "On the 26th of February, a group of young military officers attempted a coup d'état. The radical Kōdō-ha faction in the military assassinated several prominent politicians and assassinated the Prime Minister. Some people fear an uncertain future but many supports vow that the emperor's divine power has been asserted."
- japan.222.a:0 "Glory to the emperor!"
+ japan.222.d:0 "On the 26th of February, a group of young officers has succeeded in assassinating various government officials, as well as the prime minister. They have occupied Tokyo city and have secured control of the Imperial Palace, announcing their intent to purge the government of 'corrupt officials' and 'ideological threats', reinstating the Emperor as the sole ruler of the nation.\n\nTheir actions had an unexpectedly large following in the military, where intended counter-operations were forestalled by mass arrests and assassinations of elements loyal to the old government. Faced with the sudden and overwhelming nature of events, as well as rebel control of the palace, the Emperor has made no move to denounce the rebels.\n\nOrganized government resistance seems already to crumble, and the rebels are expected at any time to announce the establishment of total Imperial control to all areas of domestic, foreign, and military policy."
+ japan.222.a:0 "Tennōheika Banzai!"
  japan.47.t:0 "A Chance for Peace"
- japan.47.d:0 "We are losing on all fronts. A humanitarian crisis is unfolding in Manchuria and Korea, we could offer them peace! In return, we will forfeit Menjiang area and state x"
+ japan.47.d:0 "We are losing on all fronts. A humanitarian crisis is unfolding in Manchuria and Korea, we could offer them peace! In return, we will forfeit any state held by the Chinese in Inner Mongolia or Hebei."
  japan.47.a:0 "Offer truce!"
  japan.47.b:0 "Our troops will never back down!"
  japan.48.t:0 "A Chance for Peace"
