--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -932,6 +932,7 @@
  news.1.a:1 "Interesting times indeed."
  news.1.b:0 "We'll teach those Chinese!"
  news.1.c:0 "That's right! Not an inch!"
+ news.2.t:0 "Further Chinese Concessions to Japan"
  news.2.d:0 "Japanese and Chinese forces have skirmished inconclusively over the strategic Marco Polo Bridge located just southwest of Beijing. \n\n[CHI.GetNameDef] has accepted full responsibility for the incident, forwarding an apology to [JAP.GetNameDef] as well as agreeing to extensive territorial concessions. This has surprised many experts, who had predicted that the border tensions would erupt into a full-blown war. \n\nDoes this mean lasting peace in Asia?"
  news.2.a:0 "Doubtful."
  news.2.b:0 "This will satisfy us... for now."
