--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1457,7 +1457,8 @@
  strategic_bombing_focus:0 "Strategic Bombing"
  heavy_fighter_focus:0 "Bomber Escorts"
  escort_effort_focus:0 "Escort Effort"
- comintern_influence:0 "Comintern influence"
+ comintern_influence:0 "Cominform Influence"
+ comintern_influence_desc:0 "Invigorated by their victory over fascism, the Soviets have renewed the drive for Worldwide Communism. Propaganda and fifth columnists steered by the newly formed Cominform are destabilizing our country to bring about revolution."
  progress_cult_focus:0 "Progress Cult"
  socialist_science_focus:0 "Socialist Science"
  peoples_commissariat_focus:0 "People's Commissariat of Defense Industry"
@@ -1469,9 +1470,9 @@
  en_svensk_tiger_desc:0 "If Sweden is to be like a tiger on the prowl then those who spy on us must not know what we do. In these times of conflict and strife it is the patriotic duty of every Swede to keep silent."
  state_shintoism:0 "State Shintoism"
  state_shintoism_desc:0 "Since the Meiji Restoration we have sought to use the worship at Shinto shrines to promote imperial loyalty and aid in nation building. This has allowed us to build up a country that is ready to sacrifice much in the name of the state. "
- daitoakyoeiken:0 "Daitoa kyoeiken"
+ daitoakyoeiken:0 "Dai Tōa Kyōeiken"
  daitoakyoeiken_desc:0 "The Greater East Asia Co-Prosperity Sphere showcased the superiority of the Japanese over other Asian races and provides evidence that the Sphere was inherently hierarchical, including the Japanese Empire's true intention of domination over the Asian continent and Pacific Ocean."
- daitoakyoeiken_2:0 "Daitoa kyoeiken"
+ daitoakyoeiken_2:0 "Dai Tōa Kyōeiken"
  daitoakyoeiken_2_desc:0 "The Greater East Asia Co-Prosperity Sphere showcased the superiority of the Japanese over other Asian races and provides evidence that the Sphere was inherently hierarchical, including the Japanese Empire's true intention of domination over the Asian continent and Pacific Ocean."
  vittoria_mutilata:0 "Vittoria Mutilata"
  vittoria_mutilata_desc:0 "§LOur allies betrayed Italy and stabbed us in the back when they broke the Pact of London. We sacrificed so much blood at the Isonzo for their victory and they in turn denied us what was ours by right. Now Italy will take her destiny into her own hands and ensure that justice is done.§!"
