--- a/bicemodded/localisation/english/kmt_stuff_l_english.yml
+++ b/bicemodded/localisation/english/kmt_stuff_l_english.yml
@@ -29,7 +29,7 @@
  jap.1.a:0 "...Kodoha's violent practice must stop at once! (Historical)"
  jap.1.b:0 "...citizens are encouraged to support the Kodoha in returning the power to the Emperor."
  jap.2.t:0 "Taisei Yokusankai"
- jap.2.d:0 "Taisei Yokusankai, an organization aiming at assisting the emperor's rule, has been established."
+ jap.2.d:0 "The Taisei Yokusankai ('Imperial Rule Assistance Association') has been established by our prime minister, with the goal of promoting the Shintaisei ('New Order') movement. It is meant to be the ruling political party which will do away with the sectionalism in the politics and economics of the Empire of Japan by creating a totalitarian one-party state. This in turn will maximize our efficiency in the war effort."
  jap.2.a:0 "Nihon banzai!"
  
  ### jyutgwai events ###
