--- a/bicemodded/localisation/english/wtt_events_l_english.yml
+++ b/bicemodded/localisation/english/wtt_events_l_english.yml
@@ -656,6 +656,7 @@
  wtt_prc.20.desc:0 "New details have emerged about the latest attack on our soil. While none of the perpetrators have been caught so far, evidence clearly suggests that it was a deliberate provocation by the Chinese. \n\nThe Chinese government has been suspiciously slow in condemning the attack, and Chinese newspapers have hailed it as a heroic act of defiance against "Japanese Imperialism".\n\nThe Cabinet has assembled to discuss matters and propose measures to deal with the blatant assault."
  wtt_prc.20.a:0 "Demand an apology."
  wtt_prc.20.b:0 "Mobilize the troops and prepare to go to war."
+ wtt_prc.20.c:0 "§OWe should abandon our imperialist policy in China.§!"
  wtt_prc.21.t:0 "Arms Factory Sabotaged"
  wtt_prc.21.desc:0 "Reports have come in from one of our factories in [JAP.GetManchuriaPuppet], reporting that a major fire broke out last night. Local firefighters are still tackling the blaze, but are confident that they will have the fire under control by the end of the day. The damage to the factory appears to be significant, as the fire appears to have started in the storage area for highly flammable chemicals.\n\nMilitary Intelligence has started a thorough investigation to find out how the fire could break out despite the strictest safety measures. First leads indicate arson as a strong possibility."
  wtt_prc.21.a:0 "Who would do such a thing?"
