--- a/bicemodded/localisation/english/wtt_ideas_l_english.yml
+++ b/bicemodded/localisation/english/wtt_ideas_l_english.yml
@@ -1,27 +1,27 @@
 ﻿l_english:
  CHI_nine_power_treaty:0 "Nine Power Treaty"
  CHI_nine_power_treaty_desc:0 "We still labour under the effects of the Unequal Treaties that formalize the "Open Door Policy" towards China. The foreigners still have extraterritorial rights, and we are not in full control of our economy.§RWill be removed if at war with the signing powers!§!\n"
- CHI_army_corruption_1:0 "High Army Corruption"
+ CHI_army_corruption_1:0 "§RHigh Army Corruption§!"
  CHI_army_corruption_1_desc:0 "Our armed force are rife with corruption and nepotism. If we want to turn them into a potent fighting force, we will have to engage in a lengthy and expensive program of army reform."
- CHI_army_corruption_2:0 "Medium Army Corruption"
+ CHI_army_corruption_2:0 "§OMedium Army Corruption§!"
  CHI_army_corruption_2_desc:0 "Our armed force are rife with corruption and nepotism. If we want to turn them into a potent fighting force, we will have to engage in a lengthy and expensive program of army reform."
- CHI_army_corruption_3:0 "Low Army Corruption"
+ CHI_army_corruption_3:0 "§YLow Army Corruption§!"
  CHI_army_corruption_3_desc:0 "Our armed force are rife with corruption and nepotism. If we want to turn them into a potent fighting force, we will have to engage in a lengthy and expensive program of army reform."
  CHI_ineffective_bureaucracy:0 "Ineffective Bureaucracy"
  CHI_ineffective_bureaucracy_desc:0 "The chaos of the civil war has disrupted the creation of an effective state apparatus. More than a third of available recruits are not drafted, simply because no one knows they exist. Reforming the examination process will ensure that we hire competent people."
  CHI_incompetent_officers:0 "Incompetent Officers"
  CHI_incompetent_officers_desc:1 "Our officers are not yet up to the task of managing a modern war. Hard lessons will have to be learned before they are truly equal to their counterparts in other nations. Educating them will be part of a bigger programm of army reform."
- CHI_hyper_inflation_none:0 "Stable Economy"
+ CHI_hyper_inflation_none:0 "§BStable Economy§!"
  CHI_hyper_inflation_none_desc:0 "The economy is showing no signs of trouble."
- CHI_hyper_inflation_1:0 "Low Inflation"
+ CHI_hyper_inflation_1:0 "§GLow Inflation§!"
  CHI_hyper_inflation_1_desc:0 "Our economists have noticed a slight increase in inflation. We should keep an eye on that."
- CHI_hyper_inflation_2:0 "Moderate Inflation"
+ CHI_hyper_inflation_2:0 "§8Moderate Inflation§!"
  CHI_hyper_inflation_2_desc:0 "Inflation has started to affect the economy significantly. We should consider counter-measures before things get out of hand."
- CHI_hyper_inflation_3:0 "Heavy Inflation"
+ CHI_hyper_inflation_3:0 "§YHeavy Inflation§!"
  CHI_hyper_inflation_3_desc:0 "Government-issued money is worth less and less, purchasing power is dropping and some goods are only available to people with the right connections."
- CHI_hyper_inflation_4:0 "Hyper Inflation"
+ CHI_hyper_inflation_4:0 "§OHyper Inflation§!"
  CHI_hyper_inflation_4_desc:0 "The value of our currency is evaporating. Prices rise dramatically from day to day. We must very urgently take counter-measures before we suffer a complete collapse."
- CHI_hyper_inflation_5:0 "Economic Collapse"
+ CHI_hyper_inflation_5:0 "§REconomic Collapse§!"
  CHI_hyper_inflation_5_desc:0 "Our system of currency has completely collapsed. In large parts of the country, trade has reverted to a barter system. Poverty is widespread. Our employees use the paper money we pay them with to heat their homes. An aggressive program of financial and economic reform is needed to resolve the situation."
  incompetent_heavy_industry:0 "Incompetent Heavy Industry"
  incompetent_heavy_industry_desc:0 "We lack the skilled engineers needed for modern heavy industrial efforts."
@@ -129,6 +129,7 @@
  PRC_sino_soviet_resource_surveyors:0 "Sino-Soviet Resource Survey"
  PRC_showa_steel_works:0 "Showa Steel Works"
  PRC_government_corruption:0 "Government Corruption"
+ PRC_lure_them_in:0 "Lure Them In"
  CHI_alexander_von_falkenhausen:0 "Alexander von Falkenhausen"
  falkenhausen_recalled:0 "Von Falkenhausen Recalled"
  joseph_stilwell_sent_to_china:0 "Joseph Stilwell sent to China"
@@ -140,11 +141,11 @@
  JAP_zaibatsus_challenged_desc:0 "Zaibatsu ("financial clique") is a Japanese term referring to industrial and financial vertically integrated business conglomerates in the Empire of Japan"
  JAP_duplicate_research_efforts:0 "Duplicate Research Efforts"
  JAP_militarism:0 "Militarism"
- JAP_interservice_rivalry_army_dominant:0 "Interservice Rivalry - Army Dominant"
- JAP_interservice_rivalry_army_strengthened:0 "Interservice Rivalry - Army Strengthened"
- JAP_interservice_rivalry_balanced:0 "Interservice Rivalry - Balanced"
- JAP_interservice_rivalry_navy_strengthened:0 "Interservice Rivalry - Navy Strengthened"
- JAP_interservice_rivalry_navy_dominant:0 "Interservice Rivalry - Navy Dominant"
+ JAP_interservice_rivalry_army_dominant:0 "§9Interservice Rivalry - Army Dominant§!"
+ JAP_interservice_rivalry_army_strengthened:0 "§8Interservice Rivalry - Army Strengthened§!"
+ JAP_interservice_rivalry_balanced:0 "§YInterservice Rivalry - Balanced§!"
+ JAP_interservice_rivalry_navy_strengthened:0 "§2Interservice Rivalry - Navy Strengthened§!"
+ JAP_interservice_rivalry_navy_dominant:0 "§3Interservice Rivalry - Navy Dominant§!"
  JAP_superior_will:0 "Superior Will"
  JAP_unsanctioned_war:0 "Unsanctioned War"
  JAP_unsanctioned_war_desc:0 "The current war in China was started hurriedly, and without the sanction of the Emperor."
@@ -154,12 +155,16 @@
  MAN_exiled_imperial_family:0 "Exiled Imperial Family"
  JAP_military_purges:0 "Military Purges"
  PRC_soviet_tribute:0 "Soviet Tribute"
- MAN_low_legitimacy:0 "Low Legitimacy"
- MAN_low_legitimacy_5_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\nWe will have to establish the Emperor's independence from Japan to rally the nation under him."
- MAN_low_legitimacy_4_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\nWe will have to establish the Emperor's independence from Japan to rally the nation under him."
- MAN_low_legitimacy_3_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\nWe will have to establish the Emperor's independence from Japan to rally the nation under him."
- MAN_low_legitimacy_2_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\nWe will have to establish the Emperor's independence from Japan to rally the nation under him."
- MAN_low_legitimacy_1_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\nWe will have to establish the Emperor's independence from Japan to rally the nation under him."
+ MAN_low_legitimacy_5:0 "§RNo Legitimacy§!"
+ MAN_low_legitimacy_4:0 "§OExtremely Low Legitimacy§!"
+ MAN_low_legitimacy_3:0 "§YLow Legitimacy§!"
+ MAN_low_legitimacy_2:0 "§8Some Legitimacy§!"
+ MAN_low_legitimacy_1:0 "§GGrowing Legitimacy§!"
+ MAN_low_legitimacy_5_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§RCurrently we are barely seen as a state existing separately from [JAP.GetNameDef].§!"
+ MAN_low_legitimacy_4_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§OOur state is getting minimal recognition.§!"
+ MAN_low_legitimacy_3_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§YOur standing internationally and amongst the peoples we rule is slowly growing.§!"
+ MAN_low_legitimacy_2_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§8Minor acceptance of [ROOT.GetNameDef].§!"
+ MAN_low_legitimacy_1_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§GGrowing recognition of our destined role in China and the world.§!"
  MAN_banditry:0 "Banditry"
  MAN_banditry_desc:0 "We are engaged in low-intensity warfare with partisans, defectors and republican terrorists. We should focus on pacifying the countryside in order to hunt these bandits down."
  MAN_kwantung_veto:0 "Kwantung Veto"
