--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -9230,8 +9230,9 @@ NZL_cavalry_tank_equipment_0_desc:0 "This is a further rework of the stopgap pro
  HOL_amphibious_mechanized_equipment_2_short:1 "DAF MC-143"
  EQUIPMENT_MODULE_NOT_ALLOWED:0 "§RUnavailable§!"
  
- ship_hull_light:1 "Light Hull"
+ ship_hull_light:1 "Destroyer"
  ship_hull_light_desc:0 "The lightest screening vessel. Its job is to defend larger ships and to find and destroy submarines."
+ ship_hull_light_submarine:0 "Light Submarine"
  
  HOL_EQUIPMENT_VERSION_1:1 "No. 1"
  HOL_EQUIPMENT_VERSION_2:1 "No. 2"
