papua new guinea rework

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -8069,6 +8069,11 @@ BUL_Monarch_Speech:0 "Monarch Speech"
  NZL_destroyer:0 "Long Range Attacks"
  NZL_destroyer_desc:0 ""
  
+ 
+ AST_kokoda_trail:0 "Kokoda Trail"
+ AST_kokoda_trail_desc:0 "The Kokoda Trail is the only way we can supply our troops to Lae, in case of a Japanese invasion, its gonna be our main battlefield."
+ AST_colonial_capital:0 "The Colonial Capital"
+ AST_colonial_capital_desc:0 "We need to develop our colonial capital, it protects us by air and by navy from a potential invasion from the Dutch Indies and the Japanese"
  AST_gunbarrel:0 "Gunbarrel Highway"
  AST_gunbarrel_desc:0 "The Gunbarrel Highway is an isolated desert track in the Northern Territory, South Australia and Western Australia. It consists of about 1,350 km (840 mi) of washaways, heavy corrugations, stone, sand and flood plains. The Gunbarrel Highway connects Victory Downs in the Northern Territory to Carnegie Station in Western Australia."
  AST_eastcoast:0 "Develop the East Coast"
