--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -3587,6 +3587,7 @@
  FRA_colonial_mandate_2:0 "Colonial Mandates"
  
  NZL_torpedo_doctrine:0 "Long Range Attack Doctrine"
+ cruiser_tank_manufacturer:0 "Cruiser Tank Manufacturer"
  
  
  FRA_marquet_plan_36:0 "The Marquet Plan"
